--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,13 +5,17 @@
     font-family: 'Arial', sans-serif;
 }
 
+header {
+    text-align: center;
+}
+
 body {
     background-color: #1a2f1a;
     color: #fff;
     padding: 20px;
 }
 
-.container {
+.status-acoes {
     max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
