--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,15 +7,30 @@
 
 header {
     text-align: center;
+    width: auto;
+    padding: 20px;
+    background-color: #3f6e3f;
 }
 
 body {
     background-color: #1a2f1a;
     color: #fff;
-    padding: 20px;
+}
+
+img {
+    width: ;
 }
 
 .status-acoes {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #2d4a2d;
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+}
+
+main {
     max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
