--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,3 @@
-@import url("./style2.css");
-
 * {
     margin: 0;
     padding: 0;
@@ -283,6 +281,9 @@ h1 {
 
 /* Animação de derrota do humano */
 .human.human-defeat-animation {
+    opacity: 0.2;
+    transform: scale(0.7) rotate(-15deg);
+    filter: grayscale(80%);
     animation: humanDefeatEffect 0.5s forwards;
 }
 @keyframes humanDefeatEffect {
