--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -536,9 +536,10 @@ progress.low-energy::-moz-progress-bar { background-color: #f39c12; }
     border: 2px solid #555; /* Uma borda sutil */
 }
 
-.combat-arena .vs-text {
+.vs-text {
     font-size: 2.5em;
     color: #f8d56b; /* Cor dourada para destaque */
     font-weight: bold;
     margin: 0 15px; /* Espaçamento lateral para o texto 'VS' */
+    vertical-align: middle;
 }
